samples/_failures_safe/1761458999_4dc7a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83578fba.c: In function ‘tokenize’:
./samples/SAFE/__tmp_83578fba.c:161:27: error: expected ‘]’ at end of input
  161 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_83578fba.c:161:9: error: expected declaration or statement at end of input
  161 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_83578fba.c:161:9: error: expected declaration or statement at end of input
